force-app/main/default/objects/PrelicenseCEEnrollment__c/PrelicenseCEEnrollment__c.object-meta.xml
<CustomObject>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>Prelicense / CE Enrollment</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Continuing Education Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prelicense / CE Enrollment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>