force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prelicense / CE Enrollment</relationshipLabel>
    <relationshipName>Prelicense_Continuing_Education</relationshipName>
    <type>Lookup</type>
</CustomField>