force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/AttendeeCodeFormula__c.field-meta.xml
<CustomField>
    <fullName>AttendeeCodeFormula__c</fullName>
    <formula>IF(

ISBLANK(  ExternalId__c  ) ,
 AttendeeIDAutonum__c  ,
ExternalId__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Code</label>
    <type>Text</type>
</CustomField>