force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/AttendeeIDAutonum__c.field-meta.xml
<CustomField>
    <fullName>AttendeeIDAutonum__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Attendee ID Autonum</label>
    <type>AutoNumber</type>
</CustomField>