force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/CertificateNumber__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumber__c</fullName>
    <label>Certificate Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>