force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/CertificateNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>CertificateNumberFormula__c</fullName>
    <formula>IF(

ISBLANK( CertificateNumber__c ) ,
CertificateNumberAutonum__c ,
CertificateNumber__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate Number Formula</label>
    <type>Text</type>
</CustomField>