force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <description>PacPoint-08202020-Created for PVL CE and INS Portal</description>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Prelicense / CE Enrollment</relationshipLabel>
    <relationshipName>PrelicenseCEEnrollment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>