force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/CourseBiennium__c.field-meta.xml
<CustomField>
    <fullName>CourseBiennium__c</fullName>
    <formula>Course__r.Biennium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Biennium</label>
    <type>Text</type>
</CustomField>