force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/CourseStatus__c.field-meta.xml
<CustomField>
    <fullName>CourseStatus__c</fullName>
    <formula>TEXT(Course__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Status</label>
    <type>Text</type>
</CustomField>