force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/CourseSubject__c.field-meta.xml
<CustomField>
    <fullName>CourseSubject__c</fullName>
    <formula>Course__r.Subject__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject</label>
    <type>Text</type>
</CustomField>