force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/CourseType__c.field-meta.xml
<CustomField>
    <fullName>CourseType__c</fullName>
    <description>PacPoint-KN09042020-Created for PVL CE and INS Portal</description>
    <label>Course Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>