force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/CourseTypeFormula__c.field-meta.xml
<CustomField>
    <fullName>CourseTypeFormula__c</fullName>
    <formula>Course__r.Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Type</label>
    <type>Text</type>
</CustomField>