force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/CreateEarnedCEPrelicense__c.field-meta.xml
<CustomField>
    <fullName>CreateEarnedCEPrelicense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN09212020-Created for PVL CE and INS Portal</description>
    <label>Create Earned CE/Prelicense</label>
    <type>Checkbox</type>
</CustomField>