force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>