force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/EarnedDate__c.field-meta.xml
<CustomField>
    <fullName>EarnedDate__c</fullName>
    <label>Earned Date</label>
    <type>Date</type>
</CustomField>