force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/EnrolleeName__c.field-meta.xml
<CustomField>
    <fullName>EnrolleeName__c</fullName>
    <formula>IF(

NOT(ISBLANK( License__c )),
License__r.LicenseeNameFormula__c,

IF(
NOT(ISBLANK(Account__c)),
Account__r.FirstName + &quot; &quot; + Account__r.LastName ,
FirstName__c + &quot; &quot; + LastName__c

)
 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollee Name</label>
    <type>Text</type>
</CustomField>