force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/Fail__c.field-meta.xml
<CustomField>
    <fullName>Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN08262020-Created for PVL CE and INS Portal</description>
    <label>Fail</label>
    <type>Checkbox</type>
</CustomField>