force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>PacPoint-KN09042020-Created for PVL CE and INS Portal</description>
    <label>Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>