force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/Last4ofSSN__c.field-meta.xml
<CustomField>
    <fullName>Last4ofSSN__c</fullName>
    <label>Last 4 of SSN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>