force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-FT080719- Created for PVL phase 1</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Prelicense / CE Enrollment</relationshipLabel>
    <relationshipName>Continuing_Education</relationshipName>
    <type>Lookup</type>
</CustomField>