force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/MakeUpCredit__c.field-meta.xml
<CustomField>
    <fullName>MakeUpCredit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN09142020-Created for PVL CE and INS Portal</description>
    <label>Make Up Credit</label>
    <type>Checkbox</type>
</CustomField>