force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-KN08262020-Created for PVL CE and INS Portal</description>
    <label>Pass</label>
    <type>Checkbox</type>
</CustomField>