force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/PassDate__c.field-meta.xml
<CustomField>
    <fullName>PassDate__c</fullName>
    <description>PacPoint-KN08262020-Created for PVL CE and INS Portal</description>
    <label>Pass Date</label>
    <type>Date</type>
</CustomField>