force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-KN08202020-Created for PVL CE and INS Portal</description>
    <label>Subject</label>
    <referenceTo>Subject__c</referenceTo>
    <relationshipName>Prelicense_Continuing_Education</relationshipName>
    <type>Lookup</type>
</CustomField>