force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/SubjectCredits__c.field-meta.xml
<CustomField>
    <fullName>SubjectCredits__c</fullName>
    <formula>Course__r.Subject__r.CreditsForCESubjects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>