force-app/main/default/objects/PrelicenseCEEnrollment__c/fields/SubmitStatus__c.field-meta.xml
<CustomField>
    <fullName>SubmitStatus__c</fullName>
    <label>Submit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>